IndexedDB: Object stores not persisting between sessions https://bugs.webkit.org/show_bug.cgi?id=71313

Patch by Joshua Bell <jsbell@chromium.org> on 2011-11-03
Reviewed by Tony Chang.

Logic flaw introduced with r98806 skipped the loading of object stores
during subsequent sessions.

* storage/IDBDatabaseBackendImpl.cpp:
(WebCore::IDBDatabaseBackendImpl::IDBDatabaseBackendImpl):
(WebCore::IDBDatabaseBackendImpl::openInternal):

Canonical link: https://commits.webkit.org/87808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99218 268f45cc-cd09-0410-ab3c-d52691b4dbfc